[package]
name = "shinod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1.0.95"
axum               = { version = "0.8.1", features = ["ws", "macros"] }
axum-streams       = { version = "0.20.0", features = ["json"] }
clap               = "4.5.28"
futures            = "0.3.31"
serde              = { version = "1.0.217", features = ["derive"] }
tokio              = { version = "1.43.0", features = ["rt-multi-thread", "net"] }
tower-http         = { version = "0.6.2", features = ["trace"] }
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

bluer = { version = "0.17.3", features = ["bluetoothd", "id", "serde"] }
